--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
     <!--Importando o arquivos CSS-->
     <link rel="stylesheet" href="css/style.css">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-436Y153ZQP"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-436Y153ZQP');
+    </script>
+
+
 </head>
 <body>
     <div class="profile">
